# cmake_dynamic_load

./: CMakeLists.txt  LICENSE
cmake/modules/: BuildSet.cmake  ConfigDefine.cmake  PreventInSourceBuilds.cmake
src/: CMakeLists.txt  calculate.cc  main.cc
